crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_all_priorities-4.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Issue {
        project: ProjectId(
            "test",
        ),
        title: "Test",
        kind: Bug,
        description: None,
        priority: Some(
            Low,
        ),
        assignee: None,
    },
)
