crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_all_priorities.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Issue {
        project: "test",
        title: "Test",
        kind: Bug,
        description: None,
        priority: Some(
            Critical,
        ),
        assignee: None,
    },
)
