crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_assign.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Assign(
    AssignStatement {
        issue_id: IssueId(
            "my-project#789",
        ),
        assignee: "alice",
    },
)
