crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_close.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Close(
    CloseStatement {
        issue_id: IssueId(
            "my-project#101",
        ),
        reason: None,
    },
)
