crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_comment.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Comment(
    CommentStatement {
        issue_id: IssueId(
            "my-project#202",
        ),
        content: "This is a comment",
    },
)
