crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_create_issue.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Issue {
        project: "my-project",
        title: "Bug found",
        kind: Bug,
        description: Some(
            "Something broke",
        ),
        priority: Some(
            High,
        ),
        assignee: Some(
            UserId(
                "john_doe",
            ),
        ),
    },
)
