crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_create_project.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    Project {
        project_id: ProjectId(
            "my-project",
        ),
        name: Some(
            "My Project",
        ),
        description: Some(
            "A test project",
        ),
        owner: None,
    },
)
