crates/iql-parser/src/snapshots/issuecraft_ql__tests__parse_create_user.snap
---
source: crates/iql-parser/src/lib.rs
expression: "&result"
---
Create(
    User {
        username: "john_doe",
        email: Some(
            "john@example.com",
        ),
        name: Some(
            "John Doe",
        ),
    },
)
